--- a/jirexpo/src/main/resources/static/css/absolute.css
+++ b/jirexpo/src/main/resources/static/css/absolute.css
@@ -1,19 +1,31 @@
 .clickable {
-  background: #3d4551;
+    background: #3d4551;
+    border: 1px solid #3d4551;
 }
 
 .clickable:hover {
-  cursor: pointer;
-  background: #4fb9a7;
-  color: #1c1d22;
+    cursor: pointer;
+    background: #4fb9a7;
+    color: #1c1d22;
+    /*border: 1px solid #4fb9a7;*/
 }
 
 .text {
-  word-wrap: break-word;
-  max-width: 950px;
-  /*display: inline-block;*/
+    word-wrap: break-word;
+    max-width: 950px;
+    /*display: inline-block;*/
 }
 
 .text a, .text div, .text li, .text ul, .text p, .text span, .text pre, .text font .text {
-  white-space: pre-wrap;
+    white-space: pre-wrap;
+}
+
+.noselect__wrapper *, .noselect__wrapper {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
