--- a/jirexpo/src/main/resources/static/css/tasks.css
+++ b/jirexpo/src/main/resources/static/css/tasks.css
@@ -15,13 +15,13 @@
 }
 
 .table__wrapper tr {
-  padding: 5px 5px;
+  margin: 5px 0;
 }
 
 .table__wrapper td {
-  padding: 2px 11px;
+  padding: 3px 11px;
   font-size: 15px;
-  /*background: #314236;*/
+  height: 35px; /* Dirty hack? */
 }
 
 .table__wrapper td:first-child {
