--- a/jirexpo/src/main/resources/templates/index.html
+++ b/jirexpo/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=stylesheet type=text/css href=/css/app.css>
-    <title>jirexpo</title>
+    <title>JiraTool</title>
 </head>
 <body>
 <div class=main__wrapper id=root>
@@ -12,6 +12,6 @@
 </div>
 <script type=text/javascript src=/js/manifest.2ae2e69a05c33dfc65f8.js></script>
 <script type=text/javascript src=/js/vendor.2e4f46854cf1e58f7a08.js></script>
-<script type=text/javascript src=/js/app.e1063d6bedc1da63de27.js></script>
+<script type=text/javascript src=/js/app.46c92930fe646d21dc56.js></script>
 </body>
 </html>
