Add new front to jirexpo.

--- a/jirexpo/src/main/resources/static/css/absolute.css
+++ b/jirexpo/src/main/resources/static/css/absolute.css
@@ -1,6 +1,20 @@
+@import url("https://fonts.googleapis.com/css?family=Varela+Round");
+body,
+html{
+    background: #1c1d22;
+    color: #777;
+    height: 100%;
+    width: 100%;
+    font-family: "Varela Round", sans-serif;
+    box-sizing: border-box;
+}
+
+li{
+    list-style-type: none;
+}
+
 .clickable {
     background: #3d4551;
-    border: 1px solid #3d4551;
 }
 
 .clickable:hover {
@@ -10,22 +24,21 @@
     /*border: 1px solid #4fb9a7;*/
 }
 
-.text {
-    word-wrap: break-word;
-    max-width: 950px;
-    /*display: inline-block;*/
-}
-
-.text a, .text div, .text li, .text ul, .text p, .text span, .text pre, .text font .text {
-    white-space: pre-wrap;
-}
-
 .noselect__wrapper *, .noselect__wrapper {
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                     supported by Chrome and Opera */
+}
+
+.main__wrapper {
+    width: 90%;
+    margin: 0 auto;
+    min-height: 100%;
+    z-index: 1;
+    padding: 0 30px;
 }
