--- a/jirexpo/src/main/resources/templates/index.html
+++ b/jirexpo/src/main/resources/templates/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=stylesheet type=text/css href=/css/app.css>
+    <link rel=stylesheet type=text/css href=/css/absolute.css>
+    <link rel=stylesheet type=text/css href=/css/normalize.css>
+    <link rel=stylesheet type=text/css href=/css/app.0ed7eb36795148bc51e6a112fd8fbf27.css>
     <title>JiraTool</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
     <div id=app></div>
 </div>
 <script type=text/javascript src=/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-<script type=text/javascript src=/js/vendor.2e4f46854cf1e58f7a08.js></script>
-<script type=text/javascript src=/js/app.46c92930fe646d21dc56.js></script>
+<script type=text/javascript src=/js/vendor.ac8eaf5174cc1402fe65.js></script>
+<script type=text/javascript src=/js/app.2690cddfedfc86e908f1.js></script>
 </body>
 </html>
